# blog002

./: .env.example  .plan  Cargo.toml  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: lib.rs  main.rs  state.rs
backend/src/admin/: mod.rs  routes.rs
backend/src/admin/categories/: handlers.rs  service.rs
backend/src/admin/posts/: handlers.rs  service.rs
backend/src/admin/tags/: handlers.rs  service.rs
backend/src/admin/uploads/: handlers.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs  routes.rs
backend/src/db/: mod.rs
backend/src/models/: admin.rs  category.rs  mod.rs  post.rs  tag.rs
backend/src/uploads/: mod.rs  s3_client.rs  service.rs
frontend/: Cargo.toml  Dockerfile  package.json  tailwind.config.js
frontend/src/: main.rs
frontend/src/api/: auth.rs  categories.rs  mod.rs  posts.rs  tags.rs  upload.rs
frontend/src/components/: admin_taxonomy_form.rs  delete_confirm_modal.rs  image_upload.rs  layout.rs  mod.rs
frontend/src/pages/: admin_categories.rs  admin_login.rs  admin_posts.rs  admin_tags.rs  mod.rs
frontend/src/state/: auth.rs
frontend/styles/: input.css  tailwind.css
migrations/: 20260410232000_initial_setup.sql  20260410234000_create_admins_table.sql  20260411001000_create_revoked_jwts_table.sql  20260411003000_create_categories_and_tags.sql  20260411020000_create_posts_and_post_tags.sql
