[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
leptos.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "Event", "DragEvent", "DataTransfer", "File", "FileList", "FormData", "HtmlInputElement", "ProgressEvent", "XmlHttpRequest", "XmlHttpRequestUpload"] }
